--- a/scripts/example.ini
+++ b/scripts/example.ini
@@ -1,6 +1,6 @@
 # Example configuration file 
-#   for MultiBand_ImSim v0.7.3 
-# Created by liss (2025-11-05 12:27:48)
+#   for MultiBand_ImSim v0.9.0 
+# Created by liss (2026-01-13 13:35:00)
 # Note: If you do not use certain sections, just leave them whatever they are.
 #         They will not be loaded.
 
@@ -142,6 +142,9 @@ image_PSF =             True, False, False, False, False, False, False, False, F
 image_PSF_size =        48                     # (pixels) the size of the saved PSF image
                                                #    it is assumed to be a square
                                                #    default: 48*48 
+image_noise =           False, False, False, False, False, False, False, False, False
+                                               # save noise-only images
+                                               # required by metadetect
 casual_mag =            25                     # up to which magnitude galaxies are casually simulated
                                                #    means: only drawImage for a few, 
                                                #        the rest is randomly sampled from those simulated
@@ -178,7 +181,7 @@ simple_camera =         True                   # Camera layout using
 # for coadding or resampling
 cmd =                   swarp                  # the executable path to the SWarp code
 config_files =          coadd_theli.swarp, coadd_aw.swarp
-                                               # SWarp configuration files
+                                               # SWarp configuration files in the config folder
                                                # more than one files are supported
                                                #    in which case, more than one treatments are applied
 bands_group =           [r], [u, g, r, i]      # bands to be swarped
@@ -205,10 +208,10 @@ pixel_scale =           0.214                  # pixel scale for the image
 cross_match =           True                   # cross-match with the input catalogue
                                                #    in which case, catalogues with match info will be saved
                                                #    see next section for configuration
-config_file =           kids_sims.sex          # SExtractor configuration file
-param_file =            sex_image.param        # SExtractor parameter file
-filter_file =           default.conv           # SExtractor filter file
-starNNW_file =          default.nnw            # SExtractor Neural-Network_Weight table file
+config_file =           kids_sims.sex          # SExtractor configuration file in the config folder
+param_file =            sex_image.param        # SExtractor parameter file in the config folder
+filter_file =           default.conv           # SExtractor filter file in the config folder
+starNNW_file =          default.nnw            # SExtractor Neural-Network_Weight table file in the config folder
 checkimage_type =       NONE                   # can be one of 
                                                # NONE, BACKGROUND, MINIBACKGROUND, OBJECTS, SEGMENTATION, APERTURES, FILTERED
 clean_up_level =        0                      # clean up level
@@ -343,7 +346,10 @@ SWARP_CONFIG =          your_dir_to_lensfit/input_files
 
 method =                lensfit                # method for galaxy shape measurement
                                                # supported method:
-                                               #    lensfit
+                                               #    lensfit (require lensfit source code)
+                                               #    ams (FindAdaptiveMom in GalSim)
+                                               #    hsm (EstimateShear in GalSim)
+                                               #    metadetect (metadetection) 
 detection_band =        r                      # band with detection catalogue
 band_list =             r
                                                # bands being measured
@@ -378,6 +384,51 @@ MEMORY_LIMIT =          30000                  # only relevant for 321
 clean_up_level =        0                      # clean up level
                                                #    0: none
                                                #    1: tmp directory
+
+
+[ams]
+
+postage_size =          48                     # postage size in pixel
+sigma_fromSNR_amp =     1.16                   # amplitude for e_err and SNR relation
+sigma_fromSNR_index =   0.62                   # index for e_err and SNR relation
+sigma_fromSNR_base =    0.05                   # base for e_err and SNR relation
+sigma_intrinsic =       0.27                   # intrinsic sigma e
+guess_sig =             5.0                    # initial guess for the sigma of the object (in pixels)
+precision =             1e-6                   # convergence criterion for the moments
+round_moments =         False                  # use a circular weight function instead of elliptical
+save_Nstamps =          0                      # number of stamps saved for visual check
+
+
+[hsm]
+
+postage_size =          48                     # postage size in pixel
+same_PSF =              True                   # whether all objects have the same PSF
+sigma_fromSNR_amp =     7.26                   # amplitude for e_err and SNR relation
+sigma_fromSNR_index =   0.02                   # index for e_err and SNR relation
+sigma_fromSNR_base =    -6.6                   # base for e_err and SNR relation
+sigma_intrinsic =       0.27                   # intrinsic sigma e
+shear_est =             KSB                    # shear estimation method
+                                               # supported methods:
+                                               #    REGAUSS, LINEAR, BJ, or KSB
+recompute_flux =        NONE                   # recompute the flux or not
+guess_sig_gal =         5.0                    # initial guess for the sigma of the galaxy (in pixels)
+guess_sig_PSF =         3.0                    # initial guess for the sigma of the PSF (in pixels)
+precision =             1e-6                   # convergence criterion for the moments
+save_Nstamps =          0                      # number of stamps saved for visual check
+
+
+[metadetect]
+
+same_PSF =              True                   # whether all objects have the same PSF
+config_files =          metadetect_config.json # metadetect config file in the config folder
+                                               #    file number matches with number of bands to be measured
+pixel_scale_list =      0.214                  # the measured images' pixel scales
+                                               #    should match with what have been simulated
+cell_size =             250                    # the cell size for metadetection
+                                               #    should be even number
+central_size =          150                    # the central size for metadetection
+                                               #    should be even number and smaller than cell size
+save_Ncells =           0                      # number of cells saved for visual check
 
 
 ################################## CombineCata ###################################################
